--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,35 +1,38 @@
 .card{
-   border: 1px solid #F3F3F3;
-   padding: 30px;
-   width: 220px;
-   border-radius: 40px;
-   margin-right: 30px;
- 
-   span{
-     font-size: 13px;
-     opacity: 0.5;
-     text-transform: uppercase;
-   }
+  padding: 30px;
+  width: 220px;
+  border-radius: 40px;
+  border: 1px solid #F3F3F3;
+  margin-right: 30px;
+  margin-bottom: 40px;
+  
+    .plus{
+    cursor:pointer;
+    }
+    span{
+      font-size: 13px;
+      opacity: 0.5;
+      text-transform: uppercase;
+    }
 
-   .favorite{
+    .favorite{
       position: absolute;
       cursor: pointer;
     }
- 
-   b{
-     font-size: 13px;
-   }
- 
-   h5{
-     font-weight: 400;
-     font-size: 14px;
-   }
-   position: relative;
- 
-   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
- 
-   &:hover{
-     box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.07);
-     transform: translateY(-10px);
-   }
- }
+    
+    b{
+    font-size: 13px;
+    }
+
+    h5{
+      font-weight: 400;
+      font-size: 14px;
+    }
+    position: relative;
+    transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+    &:hover{
+      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.07);
+      transform: translateY(-10px);
+    }
+  }
