--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,6 @@
 body {
+  //cgenged
+   overflow: hidden;
   background: #E7F6FF;
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -119,6 +121,34 @@ header{
   justify-content: space-between;
 }
 
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+
 .serch-block{
   padding-left: 18px;
   width: 250px;
@@ -136,39 +166,12 @@ header{
     height: 14.25px;
     
   }
-}
-
-
-.overlay{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-
-.drawer{
-  display: flex;
-  flex-direction: column;
-
-
-  position: absolute;
-  width: 420px;
-  right: 0;
-  height: 100%;
-  background: #FFFFFF;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  padding: 30px;
-  h2{
-    margin: 0;
+  .clear{
+    text-align: right;
+    position: relative;
+    right: 20px;
+    cursor: pointer;
   }
-}
-
-.items{
-  overflow: auto;
-  margin-bottom: 40px;
 }
 
 .cartTotlaBlock{
@@ -191,6 +194,10 @@ header{
   .greenButton{
     position: relative;
 
+    &:disabled {
+      animation: button-loading-animation 0.5s ease-in-out infinite;
+    }
+
     &:hover{
       img{
         transform: translateX(5px);
@@ -208,8 +215,6 @@ header{
 
 .greenButton{
   width: 100%;
-  
-  width: 325px;
   height: 55px;
   background: #9DD558;
   border-radius: 18px;
@@ -219,6 +224,11 @@ header{
   font-weight: 500;
   cursor: pointer;
   transition: background 0.1s ease-in-out;
+
+  &:disabled{
+    background-color: #bebebe;
+    cursor: default;
+  }
 
   &:hover{
     background: lighten(#9DD558, 5%);
@@ -261,5 +271,18 @@ header{
     &:hover{
       opacity: 1;
     }
+  }
+}
+
+
+@keyframes button-loading-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
   }
 }
