Описание ваших изменений

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   //cgenged
-   overflow: hidden;
+  //  overflow: hidden;
   background: #E7F6FF;
   margin: 0;
   -webkit-font-smoothing: antialiased;
